--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,6 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-
     <img src="../assetes/GraphQL.png" alt="GraphQL Logo" class="top-logo">
 
     <div class="wrapper">
@@ -45,6 +44,6 @@
         </form>
     </div>
 
-    <script src="../scripts/login.js"></script>
+    <script type="module" src="../scripts/app.js"></script>
 </body>
 </html>
