--- a/html/profile.html
+++ b/html/profile.html
@@ -51,8 +51,23 @@
             <div id="last-projects-grid" class="projects-grid">
             </div>
         </section>
+        <div class="charts-row">
+            <section class="statistics-card">
+                <h2>Audits Statistics</h2>
+                <div class="charts-container">
+                    <div class="chart-wrapper">
+                        <div id="audit-pie-chart-container" class="chart"></div>
+                        <div id="audit-legend" class="chart-legend"></div>
+                    </div>
+                </div>
+            </section>
+            <section class="statistics-card">
+                <h2>Projects XP</h2>
+                <div id="projects-bar-chart-container" class="chart"></div>
+            </section>
+        </div>
     </main>
 
-    <script type="module" src="../scripts/profile.js"></script>
+    <script type="module" src="../scripts/app.js"></script>
 </body>
 </html>
