last update for hosting

--- a/html/profile.html
+++ b/html/profile.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile  - GraphQL </title>
-    <link rel="icon" type="image/png" href="../assetes/icon.png">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="icon" type="image/png" href="/assetes/icon.png">
+    <link rel="stylesheet" href="/style/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <img src="../assetes/GraphQL.png" alt="GraphQL Logo" class="top-logo">
+    <img src="/assetes/GraphQL.png" alt="GraphQL Logo" class="top-logo">
     <button id="logoutBtn" class="btn-submit logout-btn">
         <span>Logout</span>
         <i class='bx bx-log-out-circle'></i>
@@ -17,7 +17,7 @@
     <main class="dashboard-container">
         <section class="profile-card">
             <div class="profile-header">
-                <img src="../assetes/profile.png" alt="User Profile" class="profile-pic">
+                <img src="/assetes/profile.png" alt="User Profile" class="profile-pic">
                 <div class="profile-info">
                     <h1 id="user-name"></h1>
                     <p id="user-login"></p>
@@ -68,6 +68,6 @@
         </div>
     </main>
 
-    <script type="module" src="../scripts/app.js"></script>
+    <script type="module" src="/scripts/app.js"></script>
 </body>
 </html>
