add hosting link

--- a/html/login.html
+++ b/html/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - GraphQL</title>
-    <link rel="icon" type="image/png" href="./assetes/icon.png">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="icon" type="image/png" href="../assetes/icon.png">
+    <link rel="stylesheet" href="../style/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <img src="./assetes/GraphQL.png" alt="GraphQL Logo" class="top-logo">
+    <img src="../assetes/GraphQL.png" alt="GraphQL Logo" class="top-logo">
 
     <div class="wrapper">
         <div class="form-headr">
@@ -44,6 +44,6 @@
         </form>
     </div>
 
-    <script type="module" src="./scripts/app.js"></script>
+    <script type="module" src="../scripts/app.js"></script>
 </body>
 </html>
